# vsa-training-optimizer

./: .gitignore  README.md  pyproject.toml
src/vsa_optimizer/: __init__.py  gradient_predictor.py  phase_trainer.py  ternary_optimizer.py  vsa_compression.py
tests/: test_training_optimization.py
