[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsa-training-optimizer"
version = "0.1.0"
description = "Training optimization toolkit using VSA, ternary math, and gradient prediction"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tyler Zervas", email = "tz-dev@vectorweight.com" },
]
keywords = [
    "machine-learning",
    "deep-learning",
    "training",
    "optimization",
    "vsa",
    "hyperdimensional-computing",
    "gradient-compression",
    "ternary-quantization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tzervas/vsa-training-optimizer"
Documentation = "https://github.com/tzervas/vsa-training-optimizer#readme"
Repository = "https://github.com/tzervas/vsa-training-optimizer"
Issues = "https://github.com/tzervas/vsa-training-optimizer/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vsa_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
